feat: implement services (wip)
